[package]
name = "donation_matcher_contract"
version = "1.0.0"
authors = ["Ryan Walsh <ryan.walsh@near.foundation>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
uint = { version = "0.8.3", default-features = false }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true