[package]
name = "donation_matcher_contract"
version = "1.0.0"
authors = ["Ryan Walsh <ryan.walsh@near.foundation>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
uint = { version = "0.8.3", default-features = false }
witgen = "0.14.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size. https://www.near-sdk.io/building/basic-build
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
