[package]
name = "donation_matcher_contract"
version = "1.0.0"
authors = ["Ryan Walsh <ryan.walsh@near.foundation>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
anyhow = "1.0.59"
env_logger = "0.9.0"
test-log = "0.2.11"
tokio = "1.20.1"
workspaces = "0.4.0"

[dependencies]
near-sdk = "4.0.0"
near-units = "0.2.0"
serde_json = "1.0.83"
tracing = "0.1"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
uint = { version = "0.8.3", default-features = false }
witgen = "0.14.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size. https://www.near-sdk.io/building/basic-build
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
